--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyeux Anniversaire Marie 🎂</title>
-    <link rel="shortcut icon" href="https://www.flaticon.com/free-icons/heart" title="heart icons">Heart icons created by Freepik - Flaticon">
-
+   <!-- Lien vers l'icône -->
+    <link rel="icon" type="heart.png" sizes="32x32" href="favicon.png">
+    <!-- Alternative pour compatibilité -->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js" defer></script>
 
     <style>
@@ -902,4 +904,5 @@
 </script>
 </body>
 </html>
+
 
