--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyeux Anniversaire Marie 🎂</title>
    <!-- Lien vers l'icône -->
-    <link rel="icon" type="heart.png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="heart.png">
     <!-- Alternative pour compatibilité -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="heart.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js" defer></script>
 
     <style>
@@ -904,5 +904,6 @@
 </script>
 </body>
 </html>
+
 
 
